2014-04-12  Catherine Moore  <clm@codesourcery.com>

	* config/mips/constraints.md: Add new register constraint "kb".
	* config/mips/mips.md (*mov<mode>_internal): Use constraint "kb".
	(*movhi_internal): Likewise.
	(*movqi_internal): Likewise.
	* config/mips/mips.h (M16_STORE_REGS): New register class.
	(REG_CLASS_NAMES): Add M16_STORE_REGS.
	(REG_CLASS_CONTENTS): Likewise.
	* config/mips/mips.c (mips_regno_to_class): Add M16_STORE_REGS.

2014-04-11  Tobias Burnus  <burnus@net-b.de>

	PR c/60194
	* doc/invoke.texi (-Wformat-signedness): Document it.
	(Wformat=2): Mention that this enables -Wformat-signedness.

2014-04-11  Joern Rennecke  <joern.rennecke@embecosm.com>

	* common/config/epiphany/epiphany-common.c
	(epiphany_option_optimization_table): Enable section anchors by
	default at -O1 or higher.
	* config/epiphany/epiphany.c (TARGET_MAX_ANCHOR_OFFSET): Define.
	(TARGET_MIN_ANCHOR_OFFSET): Likewise.
	(epiphany_rtx_costs) <SET>: For binary operators, the set as such
	carries no extra cost.
	(epiphany_legitimate_address_p): For BLKmode, apply SImode check.
	* config/epiphany/epiphany.h (ASM_OUTPUT_DEF): Define.
	* config/epiphany/predicates.md (memclob_operand): New predicate.
	* config/epiphany/epiphany.md (stack_adjust_add, stack_adjust_str):
	Use memclob_operand predicate and X constraint for operand 3.

2014-04-11  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/epiphany/epiphany.c (epiphany_rtx_cost): Compare
	with CC_N_NE / CC_C_LTU / CC_C_GTU carries no extra cost for
	its operands.

2014-04-11  Joern Rennecke  <joern.rennecke@embecosm.com>

	PR rtl-optimization/60651
	* mode-switching.c (optimize_mode_switching): Make sure to emit
	sets of a lower numbered entity before sets of a higher numbered
	entity to a mode of the same or lower priority.
	When creating a seginfo for a basic block that starts with a code
	label, move the insertion point past the code label.
	(new_seginfo): Document and enforce requirement that