@@ -1,3 +1,11 @@
+2014-04-14  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/59817
+	PR tree-optimization/60453
+	* graphite-scop-detection.c (graphite_can_represent_scev): Complete
+	recursion to catch all CHRECs in the scalar evolution and restrict
+	the predicate for the remains appropriately.
+
 2014-04-12  Catherine Moore  <clm@codesourcery.com>
 
 	* config/mips/constraints.md: Add new register constraint "kb".
